2005-02-23  Anand Babu  <ab@gnu.org.in>

        Thanks tp Julian Elischer <julian@elischer.org> for reporting
	static compilation problem. 

        * src/guile-wrapper.c: Renamed gh_standard_handler to
	fish_exception_handler.

        * fish/src/fi-utils.c: fi_load now uses fish exception handler.

        * fish/src/fi-commands.c : command_eval_scheme_str now uses fish
	exception handler. command_load_scheme_file now uses fi_load API.

	
2004-10-24  Ian Zimmerman  <itz@californiadigital.com>

	* configure.ac: bump version number to 0.1.3.
	
	* ipmipower/Makefile.am, bmc-watchdog/Makefile.am, ipmiping/Makefile.am,
	rmcpping/Makefile.am: don't put configured manpages into distribution.

2004-10-19  Ian Zimmerman  <itz@californiadigital.com>

	* NEWS: insert a meaningless blurb to shut up lintian.

2004-10-16  Anand Babu  <ab@gnu.org.in>

	* libfreeipmi/src/fiid.h: fiid_template_t and fiid_tmpl_t are now
	constants.

	* ipmipower/src/ipmipower_packet.c
	(ipmipower_packet_cmd_template): modified return type accordingly.

	* libfreeipmi/src/ipmi-debug.c (fiid_obj_dump_perror): fixed
	typecast warnings.

	* doc/freeipmi.texi: Added "Auth_Type_None conflict" section to
	bmc-config known issues.

2004-10-14  Ian Zimmerman  <itz@californiadigital.com>

	* configure.ac, bmc-watchdog/Makefile.am, fish/Makefile.am,
	ipmiping/Makefile.am, ipmipower/Makefile.am, rmcpping/Makefile.am,
	doc/Makefile.am: reflect the fact that manpage templates have
	moved from the doc directory to be next to the binaries they
	describe.

	* configure.ac, fish/src/Makefile.am: Do not link everything with
	ncurses and readline, just fish.

2004-10-14  Anand Babu  <ab@gnu.org.in>

	* freeipmi/libfreeipmi/src/ipmi-semaphores.h: Portability fixes -
	careful macro checks for union semun. 
	
	* freeipmi/libfreeipmi/src/xmalloc.h: Removed error.h and
	error prototype. 

2004-10-14  Albert Chu <chu11@llnl.gov>

	* configure.ac: Remove --enable-rpm-install option.
